# 2026-Fast-Builderthon

./: .gitignore  AGENTS.md  README.md
extension/: .gitattributes  background.js  content.js  manifest.json  offscreen.html  offscreen.js  package.json  popup.html  popup.js  protocol.md  test-server.js  types.js
extension/captured-data/: audio_0001_1319s.webm  audio_0001_1391s.webm  audio_0001_906s.webm  audio_0002_1319s.webm  audio_0002_1395s.webm  audio_0002_911s.webm  audio_0003_1320s.webm  audio_0003_1401s.webm  audio_0003_916s.webm  audio_0004_1406s.webm  audio_0004_921s.webm  audio_0005_1411s.webm  audio_0005_926s.webm  audio_0006_1416s.webm  audio_0006_931s.webm  audio_0007_1421s.webm  audio_0007_937s.webm  audio_0008_1426s.webm  audio_0008_942s.webm  audio_0009_1431s.webm  audio_0010_1436s.webm  audio_0011_1441s.webm  audio_0012_1446s.webm  audio_0013_1451s.webm  audio_0014_1459s.webm  audio_session_1769846075689.webm  audio_session_1769846128015.webm  audio_session_1769846351269.webm  audio_session_1769846544650.webm  audio_session_1769846740978.webm  audio_session_1769848139779.webm  audio_session_1769848360095.webm  audio_session_1769848525857.webm  temp_stt_1769846128015.webm  temp_stt_1769846351269.webm  temp_stt_1769846544650.webm  temp_stt_1769846740978.webm  temp_stt_1769847768624.webm  temp_stt_1769848139779.webm  transcript_1769846075689.txt  (+18 more)
local-program/: AGENTS.md  README.md  audio_handler.py  config.py  live_test_nadocoding.py  live_test_nadocoding_2.py  main.py  notion_update.md  pyproject.toml  status_monitor.py  test_persistent.py  walkthrough.md
local-program/controller/: __init__.py  executor.py  keyboard.py  window.py
local-program/keymaps/: vscode.yaml
local-program/models/: __init__.py  commands.py  status.py
local-program/tests/: conftest.py  test_controller.py  test_edge_cases.py  test_integration.py  test_models.py  test_scenarios.py
server/: README.md  main.py  pyproject.toml  requirements.txt
server/2026-Fast-Builderthon/extension/: offscreen.js  package-lock.json  popup.js  protocol.md  test-server.js  types.js
server/2026-Fast-Builderthon/extension/captured-data/: audio_session_1769857379476.webm
server/2026-Fast-Builderthon/local-program/: audio_handler.py  pyproject.toml  test_websocket.py
server/core/: config.py  socket_manager.py
server/dto/: schemas.py
server/services/: ai_service.py  voice_service.py
