[project]
name = "part3-local-agent"
version = "0.1.0"
description = "AI 해커톤 Part 3 - 로컬 에이전트 (Windows 제어)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-socketio[client]>=5.10.0",
    "requests>=2.31.0",
    "pygame>=2.5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pywinauto>=0.6.8",
    "pygetwindow>=0.0.9",
    "keyboard>=0.13.5",
]

[project.scripts]
syncsight-local = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 실제 VS Code가 필요한 통합 테스트 (deselect with '-m \"not integration\"')",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line-too-long (한글 주석이 길어질 수 있음)
    "B905",   # zip-without-strict (Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]  # 테스트 파일은 bugbear/simplify 완화
