# ============================================================================
# π“¦ pyproject.toml - 2026λ…„ 1μ›” κΈ°μ¤€ μµμ‹  λ²„μ „
# ============================================================================
#
# Python 3.14.2 (2025λ…„ 12μ›” μ¶μ‹) νΈν™
# playsound3 (Lightweight Audio) - Python 3.14 κ³µμ‹ μ§€μ›
#
# ============================================================================

[project]
name = "part3-local-agent"
version = "0.1.0"
description = "AI ν•΄μ»¤ν†¤ Part 3 - λ΅μ»¬ μ—μ΄μ „νΈ (Windows μ μ–΄)"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "websockets~=16.0",          # 2026-01-10 μµμ‹ 
    "requests~=2.32.5",          # 2025-08-18 μµμ‹ 
    "playsound3~=3.3.1",         # 2026-01-22 μµμ‹  (Python 3.14 μ§€μ›, κ²½λ‰ν™”)
    "pygetwindow~=0.0.9",        # μµμ‹ 
]

[project.optional-dependencies]
windows = [
    "pywinauto~=0.6.9",          # 2025-01-06 μµμ‹ 
    "pygetwindow~=0.0.9",
]

[dependency-groups]
dev = []
