# ============================================================================
# ðŸ“¦ pyproject.toml - 2026ë…„ 1ì›” ê¸°ì¤€ ìµœì‹  ë²„ì „ (Merged)
# ============================================================================
#
# Python 3.14.2 (2025ë…„ 12ì›” ì¶œì‹œ) í˜¸í™˜
# Part 3 ë¡œì»¬ ì—ì´ì „íŠ¸ (ê±´í˜¸) + ìœˆë„ìš° ì œì–´ (ë©˜í† ) í†µí•© ì˜ì¡´ì„±
#
# ============================================================================

[project]
name = "part3-local-agent"
version = "0.1.0"
description = "AI í•´ì»¤í†¤ Part 3 - ë¡œì»¬ ì—ì´ì „íŠ¸ (Windows ì œì–´)"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # ðŸ“¡ í†µì‹  & ì˜¤ë””ì˜¤ (ê±´í˜¸)
    "websockets~=16.0",          # 2026-01-10 ìµœì‹  (ìˆœìˆ˜ WebSocket)
    "requests~=2.32.5",          # 2025-08-18 ìµœì‹ 
    "playsound3~=3.3.1",         # 2026-01-22 ìµœì‹  (ê²½ëŸ‰ ì˜¤ë””ì˜¤)
    
    # ðŸŽ® ìœˆë„ìš° ì œì–´ & ë¡œì§ (ë©˜í† )
    "pywinauto>=0.6.9",          # Windows UI ìžë™í™”
    "pygetwindow>=0.0.9",        # ì°½ ì •ë³´ ê°€ì ¸ì˜¤ê¸°
    "keyboard>=0.13.5",          # í‚¤ë³´ë“œ ìž…ë ¥ ì œì–´
    "pydantic>=2.0",             # ë°ì´í„° ëª¨ë¸ë§
    "pyyaml>=6.0",               # ì„¤ì • íŒŒì¼ ì²˜ë¦¬
]

[project.scripts]
syncsight-local = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B905"]
